--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,3 +2,22 @@
     <h1>Simple App</h1>
     <h3>It just is</h3>
 </div>
+
+<div class="row">
+    <div class="col-md-6">
+        <div class="well">
+            <h2 class="text-center">Basic Membership</h2>
+            <h4>Sign up for free and get basic access to the community.</h4>
+            <br />
+            <%= link_to "Free", new_user_registration_path, class: 'btn btn-primary btn-lg btn-block' %>
+        </div>
+    </div>
+    <div class="col-md-6">
+        <div class="well">
+            <h2 class="text-center">Pro Membership</h2>
+            <h4>Get full access to the community plus contact information.</h4>
+            <br />
+            <%= link_to "Go Premium", new_user_registration_path, class: 'btn btn-success btn-lg btn-block' %>
+        </div>
+    </div>
+</div>
